# databricks-sql-validator

./: .gitignore  CLAUDE.md  README.md  databricks.yml  pyproject.toml
.claude/commands/: deploy.md  run.md  test.md
cli/: run_validation.py
resources/: sql_validation_job.yml
src/notebooks/: 01_extract_sql.py  02_validate_syntax.py  03_export_csv.py  03_merge_results.py  04_export_csv.py
src/notebooks/pyscripts/: marker_detector.py  merge_validation_results.py  python_sql_extractor.py  sql_utils.py
tests/: test_marker_detector.py  test_python_sql_extractor.py  test_sql_utils.py
