[project]
name = "databricks-sql-validator"
version = "0.1.0"
description = "Validate SQL file syntax on Databricks using Spark SQL EXPLAIN with batch parallel execution"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
merge = ["pandas>=1.5.0"]
cli = ["databricks-sdk>=0.20.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
